--- a/src/config.hrl.example
+++ b/src/config.hrl.example
@@ -1,4 +1,6 @@
--define(TIMEOUT, 6000).
+%% 1000 is 1 sencond
+
+-define(TIMEOUT, 10000).
 -define(LOCALIP, "127.0.0.1").
 -define(LOCALPORT, 7070).
 
