--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
-*.swp
-*.bak
+.rebar3
+_*
+.eunit
+*.o
 *.beam
-*.dump
-*.log
-*.lock
-
-_build
-server.config
-client.config
+*.plt
+*.swp
+*.swo
+.erlang.cookie
 ebin
-.idea
+log
+erl_crash.dump
 .rebar
+logs
+_build
+.idea
+*.iml
+*.lock
+app.config
